--- a/templates/form.html
+++ b/templates/form.html
@@ -1,26 +1,78 @@
 <!DOCTYPE html>
 <html lang="en">
+</head>
+<script>
+  (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+  (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+  m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+  })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
 
+  ga('create', 'UA-40427139-3', 'auto');
+  ga('send', 'pageview');
+
+</script>
 <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css">
 <link rel="stylesheet" href="static/css/file_upload_button.css">
 <script src="//code.jquery.com/jquery-1.11.3.min.js"></script>
 <script src="static/javascript/file_upload_button.js"></script>
+</head>
 
+<title>voltulator.com - Chevy Volt Calculator</title>
 
-<title>Upload new File</title>
-
-<h1>Upload new File</h1>
-
-<form class="form-inline" action="" method=post enctype=multipart/form-data>
-    <div class="input-group">
-        <span class="input-group-btn">
-            <span class="btn btn-primary btn-file">
-                Browse&hellip; <input type="file" name="infile" multiple>
-            </span>
-        </span>
-        <input type="text" class="form-control" readonly>
+<nav class="navbar navbar-default">
+  <div class="container-fluid">
+    <div class="navbar-header">
+      <a class="navbar-brand" href="http://voltulator.com">
+         Voltulator
+      </a>
     </div>
-    <button type=submit class="btn btn-default">Upload</button>
-</form>
+  </div>
+</nav>
 
+<div class="container">
+
+<div class="col-md-8">
+<h3 class="text-group text-center">Calculate your charging costs!</h3>
+<br>
+<form class="form-horizontal" action="" method=post enctype=multipart/form-data>
+        <div class="form-group">
+            <label for="kWhr" class="col-sm-4 control-label">Cents pr kWhr</label>
+            <div class="col-md-8">
+              <input type="text" class="form-control skinny" id="kWhr" name="incents">
+            </div>
+        </div>
+        <div class="form-group"> 
+            <label for="file" class="col-sm-4 control-label">File</label>
+            <div class="col-md-8">
+            <div class="input-group skinny" id="file">
+                <span class="input-group-btn">
+                    <span class="btn btn-primary btn-file">
+                        Browse&hellip; <input type="file" name="infile" multiple>
+                    </span>
+                </span>
+                <input type="text" class="form-control" readonly>
+            </div>
+            </div>
+         </div>
+         <div class="form-group">
+            <div class="col-md-offset-4 col-md-8">
+              <button type=submit class="btn btn-default">Upload</button>
+            </div>
+         </div>
+</form>
+</div>
+
+<div class="col-md-4 box">
+   <h3>Instructions</h3>
+   <ul>
+     <li>Login to myvolt.com</li>
+     <li>Click: View Charging Details</li>
+     <li>Select 30 days from the drop down menu</li>
+     <li>Click: Download full history</li>
+     <li>Upload that file here</li>
+   </ul>
+</div>
+
+
+</div>
 </html>
