--- a/templates/table.html
+++ b/templates/table.html
@@ -3,19 +3,38 @@
 
 <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css">
 
+<nav class="navbar navbar-default">
+  <div class="container-fluid">
+    <div class="navbar-header">
+      <a class="navbar-brand" href="http://voltulator.com">
+        Voltulator 
+      </a>
+    </div>
+  </div>
+</nav>
+
+<br>
+
+<div class="container">
+<div class="row">
+
+<div class="col-md-8">
 <table class = "table table-striped table-bordered table-condensed">
     <tr>
         <th><h4>Charge Start </h4></th>
         <th><h4>kWhr</h4></th>
         <th><h4>Cost</h4></th>
     </tr>
-{% for t in table %}
-    <tr>
-    {% for i in t %}
-        <td>{{ i }}</td>
+    {% for t in table %}
+        <tr>
+        {% for i in t %}
+            <td>{{ i }}</td>
+        {% endfor %}
+        </tr>
     {% endfor %}
-    </tr>
-{% endfor %}
- </table>
+    </table>
+</div>
 
+</div>
+</div>
 </html>
