--- a/templates/form.html
+++ b/templates/form.html
@@ -13,6 +13,7 @@
 </script>
 <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css">
 <link rel="stylesheet" href="static/css/file_upload_button.css">
+<link rel="stylesheet" href="static/css/base.css">
 <script src="//code.jquery.com/jquery-1.11.3.min.js"></script>
 <script src="static/javascript/file_upload_button.js"></script>
 </head>
@@ -36,9 +37,15 @@
 <br>
 <form class="form-horizontal" action="" method=post enctype=multipart/form-data>
         <div class="form-group">
-            <label for="kWhr" class="col-sm-4 control-label">Cents pr kWhr</label>
+            <label for="gal" class="col-sm-4 control-label">Dollars per Gallon</label>
             <div class="col-md-8">
-              <input type="text" class="form-control skinny" id="kWhr" name="incents">
+              <input type="text" class="form-control skinny" id="gal" name="ingas">
+            </div>
+        </div>
+        <div class="form-group">
+            <label for="kWhr" class="col-sm-4 control-label">Cents per kWhr</label>
+            <div class="col-md-8">
+              <input type="text" class="form-control skinny" id="kWhr" name="inelec">
             </div>
         </div>
         <div class="form-group"> 
@@ -65,14 +72,15 @@
 <div class="col-md-4 box">
    <h3>Instructions</h3>
    <ul>
-     <li>Login to myvolt.com</li>
-     <li>Click: View Charging Details</li>
-     <li>Select 30 days from the drop down menu</li>
-     <li>Click: Download full history</li>
+     <li>Login to <a href="http://myvolt.com">myvolt.com</a></li>
+     <li>Click: "View Charging Details"</li>
+     <li>Select "Last 30 Days" from the drop down menu</li>
+     <li>Click: "Download Complete Charge History"</li>
      <li>Upload that file here</li>
    </ul>
+<br>
+<p class="text-center" style="font-size:10px"><a href="/example">Example at $1.99/gal and 10.7 cents/kWhr</a></p>
 </div>
-
 
 </div>
 </html>
