--- a/templates/form.html
+++ b/templates/form.html
@@ -14,6 +14,7 @@
 <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css">
 <link rel="stylesheet" href="static/css/file_upload_button.css">
 <link rel="stylesheet" href="static/css/base.css">
+<link rel="shortcut icon" href="{{ url_for('static', filename='favicon.ico') }}">
 <script src="//code.jquery.com/jquery-1.11.3.min.js"></script>
 <script src="static/javascript/file_upload_button.js"></script>
 </head>
@@ -32,6 +33,7 @@
 
 <div class="container">
 
+<div class="row">
 <div class="col-md-8">
 <h3 class="text-group text-center">Calculate your charging costs!</h3>
 <br>
@@ -79,8 +81,19 @@
      <li>Upload that file here</li>
    </ul>
 <br>
-<p class="text-center" style="font-size:10px"><a href="/example">Example at $1.99/gal and 10.7 cents/kWhr</a></p>
+<p class="text-center" style="font-size:10px"><a href="/example">Example at $2.65/gal and 10 cents/kWhr</a></p>
+</div>
+</div>
+<br>
+<div class="row">
+ <div class="col-md-12">
+  <p class="text-center" style="font-size:10px">Like what I've made here? Buy me a beer!</p>
+  <a href="https://www.paypal.me/legomaniac/5"><button type="button" class="btn btn-default btn-lg center-block">
+    <span class="glyphicon glyphicon-usd" aria-hidden="true"></span> Donate
+  </button></a>
+ </div>
 </div>
 
 </div>
+
 </html>
