--- a/templates/table.html
+++ b/templates/table.html
@@ -3,6 +3,7 @@
 
 <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css">
 <link rel="stylesheet" href="static/css/base.css">
+<link rel="shortcut icon" href="{{ url_for('static', filename='favicon.ico') }}">
 
 <nav class="navbar navbar-default">
   <div class="container-fluid">
